# ipsim

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: ecstr_detect_oscillation.ipynb  simple_models.ipynb  tes_ml.ipynb  tes_models.ipynb
demos/: ecsrt_boken.py
examples/: ECSTR_S0_example.ipynb  ECSTR_example.ipynb
ipsim/: __init__.py  ipsim.py
ipsim/models/: CSTR.py  DistillationColumn.py  ECSTR.py  ECSTR_S0.py  KlattEngellReactor.py  STEP.py  STEPEx.py  __init__.py
ipsim/tests/: test_ECSTR  test_core.py
models/: CSTR.py  STEP.py  __init__.py
tests/: test_core.py
