[tool.poetry]
name = "ipsim"
version = "0.0.1"
description = "Industrial processes simulator with feedback loop for digital twin benchmarking"
authors = ["Haridus"]
license = "MIP"

[tool.poetry.dependencies]
scikit-learn = "*"
numpy = "< 2.0"
matplotlib = "*"
scipy = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"